# re-project-backend

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  pr.yml
backend/: __main__.py  dependencies.py  main.py  router.py
backend/alembic/: README  env.py
backend/alembic/versions/: 0acc7b6e123e_student_educations.py  2ab1d11cd5cd_internship.py  4c1415d9105a_authentication.py  7ad5213cc3c6_student_profile.py  7c8f7ddee2d6_authentication.py  a928b948fd07_company_domain_internship_deadline_and_.py  b5553c92f47c_fix_birthdate_type.py  b9374e7a1d0e_internship_applications.py  be95a29f7f08_init_db.py  dba7647b3b9b_student_volunteering.py  dc29d554e65c_company_profile.py  e1d0ce077cb4_student_profile.py
backend/core/: config.py  security.py
backend/db/: __init__.py  crud.py  database.py  models.py  schemas.py
backend/models/: __init__.py  company.py  student.py  user.py
backend/routers/: auth.py  company.py  internship.py  student.py
backend/schemas/: company.py  operational.py  student.py  user.py
backend/services/: auth.py  company.py  students.py  user.py
docker/: docker-entrypoint.sh
