[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for platform where students can search for internship."
authors = ["Cristi B. <cbetivu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.70.1"}
uvicorn = "^0.15"
SQLAlchemy = "^1.4.29"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pylint = "^2.12.2"
isort = "^5.10.1"
pre-commit = "^2.16.0"
pydocstyle = "^6.1.1"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = 100 # share line length settings with black

[tool.pylint.messages_control]
# C0330 and C0326 are incompatible with black
# https://github.com/psf/black/blob/master/docs/compatible_configs.md#pylint
disable = """
    C0330,
    C0326,
    line-too-long,
    too-few-public-methods
    """

good-names="""
    i,
    j,
    k,
    x,
    y,
    z,
    _,
    db
    """

extension-pkg-whitelist = "pydantic"

[tool.isort]
# See: https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html?highlight=pyproject.toml#profile
profile = "black"
